--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -92,7 +92,6 @@ h2 {
     font-weight: bold;
 }
 h3 {
-    margin-bottom: 1rem;
     font-weight: bold;
     text-align: center;
 }
@@ -200,11 +199,19 @@ h3 {
 .card {
     width: 40%;
     height: 20rem;
-    border-radius: 25px;
-    /*background-color: rgb(153, 153, 102, 0.5);*/
-    background-color: rgb(229, 222, 186, 0.5);
-    padding: 0.5rem 1rem;
+    border-radius: 0 0 25px 25px;
+    /*background-color: rgb(229, 222, 186, 0.5);*/
+    background-color: #FFFFFF;
     margin: 0 1rem 1rem 1rem;
+}
+
+.cardTitle {
+    background-color: #EEEEEE;
+    padding: 0.3rem 0.5rem 0.3rem 0.5rem;
+}
+
+.cardBody {
+    padding: 0.5rem 1rem;
 }
 
 footer {
@@ -214,8 +221,7 @@ footer {
     font-size: 0.8rem;
 }
 
-#type {
-    height: 3rem;
+#write {
     font-family: 'Courier New', monospace;
     font-size: 1.5rem;
 }
