--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,8 +71,6 @@ li ul {
 
 a {
     text-decoration: none;
-    /*text-shadow: 1px 1px red;
-    color: black;*/
     color: #DD4F4F;
     font-weight: bold;
 }
@@ -200,18 +198,57 @@ h3 {
     width: 40%;
     height: 20rem;
     border-radius: 0 0 25px 25px;
-    /*background-color: rgb(229, 222, 186, 0.5);*/
+    border: 1px solid #000000;
     background-color: #FFFFFF;
     margin: 0 1rem 1rem 1rem;
 }
 
 .cardTitle {
+    overflow-wrap: break-word;
     background-color: #EEEEEE;
     padding: 0.3rem 0.5rem 0.3rem 0.5rem;
 }
 
 .cardBody {
     padding: 0.5rem 1rem;
+}
+
+.cardStacks {
+    border: 5px solid black;
+    border-radius: 25px;
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+.cardTitleStacks {
+    border-bottom: 5px solid black;
+    overflow-wrap: break-word;
+    padding: 0.3rem 0.5rem 0.3rem 0.5rem;
+    font-weight: bold;
+    font-variant: small-caps;
+    font-size: 1.5rem;
+}
+
+.cardBody {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 0.5rem 1rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.stack {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0.5rem;
+    width: 7rem;
+    font-weight: bold;    
+}
+
+.stack img {
+    width: 4rem;
 }
 
 footer {
@@ -270,9 +307,6 @@ footer {
     .BigContainer {
         width: 90%;
     }
-    .SmallContainer {
-        width: 80%;
-    }
     .menu {
         display: block;
         text-align: center;
@@ -292,5 +326,11 @@ footer {
 @media only screen and (max-width: 850px) {
     .card {
         width: 80%;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .card {
+        width: 100%;
     }
 }
