--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -117,6 +117,16 @@ nav {
     font-size: 1.2rem;
 }
 
+.imgTextIntroduction {
+    display: flex;
+}
+
+.mainPhoto {
+    height: 5rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
 section {
     min-height: 50vh;
 }
@@ -184,11 +194,6 @@ h3 {
     flex-wrap: wrap;
 }
 
-.contrastCharacter {
-    font-family: 'Noto Emoji';
-    margin-bottom: 0.5rem;
-}
-
 .imgText {
     height: 1.5rem;
     vertical-align: middle;
@@ -202,15 +207,6 @@ h3 {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-}
-
-.titleCenter {
-    text-align: center;
-    font-variant: small-caps;
-    font-weight: bold;
-    font-size: 2rem;
-    margin: auto;
-    margin-bottom: 1rem;
 }
 
 .card {
@@ -317,6 +313,15 @@ footer {
     }
     .logo {
         margin-left: 5rem;
+    }
+    .imgTextIntroduction {
+        display: block;
+    }
+    .mainPhoto {
+        display: block;
+        margin-right: 0;
+        margin: auto;
+        margin-bottom: 1rem;
     }
 }
 
