--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -109,6 +109,7 @@ nav {
     float: right;
     padding: 0.3rem;
     background-color: #aa1d1d;
+    z-index: 1;
 }
 
 .menuItemLink {
@@ -195,7 +196,7 @@ h3 {
 
 .container-right {
     display: flex;
-    justify-content: flex-end
+    justify-content: flex-end;
 }
 
 .flex {
