--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -303,6 +303,12 @@ footer {
     font-size: 1.5rem;
 }
 
+@media only screen and (min-width: 2880px) {
+    nav {
+        background-image: url(../img/background/wood-4k.jpg);
+    }
+}
+
 @media only screen and (max-width: 1700px) {
     .container {
         width: 60%;
